Initial code from FRDM-TFC example code

--- a/FRDM-TFC/FLASH/makefile.local
+++ b/FRDM-TFC/FLASH/makefile.local
@@ -5,6 +5,6 @@
 ################################################################################
 
 export GNU_Make_Install_DirEnv=$(CWInstallLocationEnv)/gnu/bin
-export ProjDirPath=C:/Users/dickwyn/git/orangeRun/FRDM-TFC
+export ProjDirPath=C:/Users/dickwyn/OneDrive/R1.0/FRDM-TFC
 export CWInstallLocationEnv=C:/Freescale/CW MCU v10.6
 export ARMSourceryDirEnv=$(CWInstallLocationEnv)/Cross_Tools/arm-none-eabi-gcc-4_7_3/bin
